# DNA_Sharp

./: .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake  README.md
cmake/: conan.cmake
cmake/YACHT/: yacht.sh
examples/: fibonnacci_symbol.dna  fibonnaci_helix.dna  fibonnaci_line.dna  fibonnaci_symbol.dna  hello_world_line.dna  hello_world_symbol.dna  quine_helix.dna
src/: conversions.hpp  interpreter.hpp  interpreter_tests.cpp  main.cpp
tests/: conversions_tests.cpp  interpreter_tests.cpp
